overview buttons visibility fixed. (#2007)

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-status.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-detail/_host-status.scss
@@ -5,6 +5,6 @@
 }
 
 .host-overview.host-item.is-overview-panel-visible {
-  max-height: 100px;
+  max-height: 60px;
   transition: max-height 0.25s ease-in;
 }
